# tiny-openml

./: .gitignore  CMakeLists.txt  README.md  decision_tree.py  prereqs.hpp
dataset/: diabetes.txt  input-1.txt  ionosphere.txt  iris.txt  wine.txt
decision_tree/: decision_tree.py
dimensionality_reduction/: PCA.py
kmeans/: kmeans.py  utils.py
knn/: knn.py  processing_data.py
linear_models/: gaussian_discriminant_analysis.py  gaussian_process_regression.py  linear_discriminant_analysis.py  linear_regression.py  logistic_regression.py  perceptron.py  ridge_regression.py  utils.py
linear_regression/: linear_regression.cpp  linear_regression.hpp  linear_regression.py  main.cpp
logic_regression/: logic_regression.py
neighbors/: _kd_tree.py
openmlpack/numpy2arma/: __init__.py  numpy2arma.pxd  numpy2arma.pyx
python/linear_models/: SGDRegressor.py  gaussian_process_regression.py  linear_regression.py  perceptron.py  ridge_regression.py
python/naive_bayes/: __init__.py
python/neighbors/: knn.py  utils.py
python/svm/: __init__.py
ridge_regression/: ridge_regression.py
src/: core.hpp  prereqs.hpp
src/core/: common.hpp  metric.hpp  preprocessing.hpp  utils.hpp
src/core/data/: load.hpp  load_data.hpp  split.hpp  split_data.hpp
src/core/initializer/: rand_initializer.hpp  zero_initializer.hpp
src/core/loss/: hinge_loss.hpp  huber_loss.hpp  log_loss.hpp  mean_squared_error.hpp  softmax_loss.hpp
src/core/loss_func/: log_loss.hpp  mean_squared_error.hpp
src/core/math/: dist.hpp  extmath.hpp  lin_alg.hpp  linalg.hpp  ops.hpp  prob_dist.hpp  proba.hpp  random.hpp  shuffle.hpp  shuffle_data.hpp  unary_ops.hpp
src/core/optimizer/: base.hpp
src/core/preprocessing/: transaction_encoder.hpp
src/core/tree/: ball_tree.hpp  hash_tree.hpp  kd_tree.hpp
src/core/utility/: utils.hpp
src/data/: boston_house_price.txt
src/methods/cluster/: kmeans.hpp  spectral_clustering.hpp
src/methods/decomposition/: base.hpp  pca.hpp  truncated_svd.hpp
src/methods/linear_model/: base.hpp  lasso_regression.hpp  linear_regression.hpp  logistic_regression.cpp  logistic_regression.hpp  perceptron.hpp  ridge_regression.hpp  softmax_regression.hpp
src/methods/linear_regression/: linear_regression.cpp  linear_regression.hpp  test.cpp
src/methods/logistic_regression/: logistic_regression.cpp  logistic_regression.hpp  logistic_regression_function.cpp  logistic_regression_function.hpp
src/methods/mixture/: gaussian_mixture.hpp
src/methods/naive_bayes/: base.hpp  gaussian_naive_bayes.hpp  multinomial_naive_bayes.hpp  naive_bayes.cpp  naive_bayes.hpp
src/methods/neighbors/: KDTree.hpp  k_nearest_neighbors.hpp  kd_tree.hpp
src/methods/pca/: pca.cpp  pca.hpp
src/methods/perceptron/: perceptron.cpp  perceptron.hpp
src/test/: linear_regression_test.cpp  logistic_regression_test.cpp  pca_test.cpp
svm/: SVM.py  svm.cpp  svm.hpp  svm_data.h  svm_data.hpp  svm_model.h  svm_model.hpp  svm_node.h  svm_node.hpp  svm_params.h  svm_params.hpp  svm_utils.cpp  svm_utils.h
test/: apriori_test.cpp  decision_tree_classifier_test.cpp  decision_tree_regressor_test.cpp  gaussian_naive_bayes_test.cpp  gmm_test.cpp  hash_tree_test.cpp  hinge_loss_test.cpp  k_nearest_neighbors_test.cpp  kd_tree_test.cpp  kmeans.cpp  knn_test.cpp  lasso_regression_test.cpp  lbfgs_test.cpp  linear_regression  log_loss_test.cpp  logistic_regression_test.cpp  mse_test.cpp  multinomial_naive_bayes_test.cpp  pca_test.cpp  perceptron_test.cpp  ridge_regression_test.cpp  sag_test.cpp  scd_test.cpp  sgd_test.cpp  softmax_loss_test.cpp  softmax_regression_test.cpp  transaction_encoder_test.cpp  truncated_gradient_test.cpp  truncated_svd_test.cpp
(+36 files in other folders)
